fix: align feedback button

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -15,7 +15,7 @@ footer {
     position: relative;
 
     button {
-      width: 120px;
+      width: 110px;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -23,6 +23,7 @@ footer {
       background: none;
       color: $secondary-color;
       font-weight: 400;
+      padding-left: 0;
     }
 
     &--form {
@@ -141,7 +142,7 @@ footer {
       width: 40%;
 
       button {
-        width: 100%;
+        width: 120px;
       }
 
       &--form {
